--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "letyii/yii2-rbac-mongodb": "dev-master",
         "letyii/yii2-mongo-nested-set": "dev-master",
         "letyii/yii2-tinymce": "*",
-        "letyii/yii2-jstree": "1.0-alpha",
-        "letyii/yii2-cropper": "dev-master",
+        "letyii/yii2-jstree": "*",
+        "letyii/yii2-cropper": "*",
         "letyii/yii2-imagecache": "dev-master",
         "letyii/yii2-diy": "1.0-alpha",
         "kartik-v/bootstrap-fileinput": "*",
